# Magic-SigExplorer

./: .gitignore  Dockerfile  README.md  pyproject.toml  runner.py
.github/workflow/: check-and-build.yml
.github/workflows/: check-and-build.yml  deploy.yml  update-rules.yml
Magic-SigExplorer/: mkdocs.yml
Magic-SigExplorer/docs/: custom.md  cve_report.md  et.md  index.md  snort.md
Magic-SigExplorer/site/: 404.html  index.html  search.html
rule_files/: custom.rules  snort3-community.rules
yaml/custom/: custom_rule_1000001.yaml  custom_rule_1000002.yaml  custom_rule_1000003.yaml  custom_rule_1000004.yaml  custom_rule_1000010.yaml  custom_rule_1000011.yaml
yaml/et/: et_rule_2000015.yaml  et_rule_2000026.yaml  et_rule_2000105.yaml  et_rule_2000106.yaml  et_rule_2000328.yaml  et_rule_2000332.yaml  et_rule_2000333.yaml  et_rule_2000334.yaml  et_rule_2000345.yaml  et_rule_2000347.yaml  et_rule_2000348.yaml  et_rule_2000349.yaml  et_rule_2000350.yaml  et_rule_2000351.yaml  et_rule_2000352.yaml  et_rule_2000355.yaml  et_rule_2000357.yaml  et_rule_2000369.yaml  et_rule_2000418.yaml  et_rule_2000488.yaml  et_rule_2000499.yaml  et_rule_2000500.yaml  et_rule_2000501.yaml  et_rule_2000502.yaml  et_rule_2000503.yaml  et_rule_2000504.yaml  et_rule_2000505.yaml  et_rule_2000506.yaml  et_rule_2000507.yaml  et_rule_2000508.yaml  et_rule_2000563.yaml  et_rule_2000564.yaml  et_rule_2000565.yaml  et_rule_2000566.yaml  et_rule_2000567.yaml  et_rule_2000568.yaml  et_rule_2000571.yaml  et_rule_2000575.yaml  et_rule_2000586.yaml  et_rule_2000596.yaml  (+34032 more)
(+42045 files in other folders)
