[tool.poetry]
name = "magic-sigexplorer"
version = "0.1.0"
description = ""
authors = ["magicsword <info@magicsword.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
PyYAML = "^6.0.1"
Jinja2 = "^3.1.2"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
